# esync-ua

./: .gitignore  .gitmodules  CMakeLists.txt  FindLibZip.cmake  README  build_config.h.in  buildall.sh  config.cmk  config.cmk.tmpl  make_version.sh  setup.py  tags
cross_compile_scripts/: build-arm.sh  jsonced  toolchain_root_arm.sh
ghs_port/: README.md  build_all_ghs.sh  config.cmk.tmpl  default.gpj.in  delta_patch.gpj.in  delta_patch.int.in  deltapatcher.gpj.in  deps.cmk.tmpl  esync_ghs_kernel.gpj.in  esync_ivfsserver_module.gpj.in  esync_ivfsserver_mounttable.c  esync_vfs_main.c  integrity.cmake  kernel_main.c  libua.gpj.in  resources.gpj.in  tmpl-updateagent.gpj.in  tmpl-updateagent.int.in  updateagent.gpj.in
ghs_port/esdiff/: CMakeLists.txt  default.gpj.in  libesdeltadec.gpj.in
ghs_port/libxml2/: CMakeLists.txt  config.h.in  default.gpj.in  libxml2.gpj.in  xmlversion.h.in
ghs_port/libzip/: CMakeLists.txt  default.gpj.in  libzip.gpj.in  zip_get_encryption_implementation.c
ghs_port/xz/: CMakeLists.txt  config.h.in  default.gpj.in  libxz.gpj.in
ghs_port/zlib/: CMakeLists.txt  default.gpj.in  libzlib.gpj.in  resources.gpj.in
linux_port/: build_deps.sh  config.cmk.tmpl  deps.cmk.tmpl
pylibua/: .gitignore  MyUaXl4bus.py  Readme.python  Readme.python.md  UaXl4bus.py  esyncua.html  esyncua.py  libuac.i  makefile  pua.c  pua.h  test_ua.py  tmpl_ua.py
qnx_port/: README.txt  build.sh  build_deps.sh  config.cmk.tmpl  deps.cmk.tmpl
qnx_port/cmake/: qnx660_armv7l.cmake  qnx700_aarch64l.cmake  qnx700_armv7l.cmake
qnx_port/source/: utility.c
src/: Crc32.c  Crc32.h  base64.c  base64.h  client.c  client.h  common.c  common.h  component.c  component.h  config.h  debug.h  delta.c  delta.h  diagnostic.c  diagnostic.h  eua_json.h  handler.c  handler.h  misc.c  misc.h  patcher.c  porting.h  string_safe.c  string_safe.h  ua_download.c  ua_download.h  uaclient.c  uaclient.h  updateagent.c  updateagent.h  updater.c  updater.h  utarray.h  uthash.h  utils.c  utils.h  utlist.h  xl4busclient.c  xl4busclient.h  (+2 more)
src/delta_utils/: delta_utils.h  espatch.c  xzdec.c
src/include/: esyncua.h  xl4ua.h
src/test_agents/: main_updateagent.c  tmpl_updateagent.c  tmpl_updateagent.h  updateagent.c  util.c  util.h
src/tools/: make_backup.c  patcher.c
unit_tests/: test_setup.c  test_setup.h  ual_test.c  ut_main.c  ut_updateagent.c  ut_updateagent.h
unit_tests/cases/: ut_normal_update  ut_normal_update_failed  ut_prepare_updates  ut_resume_normal_update  ut_rollback_by_dmc_failed  ut_rollback_fake_version  ut_rollback_mixed  ut_rollback_ua_controlled
unit_tests/fixure/: ECU_HMNS_ROM-4.0.x
unit_tests/fixure/backup/: ECU_HMNS_ROM-2.0.x
unit_tests/fixure/backup/ECU_HMNS_ROM_1.0/: manifest_pkg.xml
unit_tests/fixure/backup/ECU_HMNS_ROM_1.0/1.0/: ECU_HMNS_ROM-1.0.x
unit_tests/fixure/backup/ECU_HMNS_ROM_3.0/: manifest_pkg.xml
unit_tests/fixure/backup/ECU_HMNS_ROM_3.0/3.0/: ECU_HMNS_ROM-3.0.x
unit_tests/fixure/backup/ECU_HMNS_ROM_4.0/: manifest_pkg.xml
unit_tests/fixure/delta/4.0_3.0/: ECU_HMNS_ROM-3.0.x
unit_tests/fixure/rollback/: rbConf  rbFailed
